SMAR-25550 | alignment issue

--- a/tetrapak-customerhub/ui.dev/src/source/templates/components/myequipment/_myEquipment.scss
+++ b/tetrapak-customerhub/ui.dev/src/source/templates/components/myequipment/_myEquipment.scss
@@ -295,7 +295,7 @@
             color: $color-sky-blue;
         }
         &.second {
-            @include margin-top($margin-md);
+            @include margin-top(12px);
             @include margin-bottom($margin-md);
             @media #{$desktop} {
                 @include margin-top($margin-zero);
